replacement endpoints
