# server/src/index.ts
@@ -13,6 +13,7 @@ import studentRouter from './routes/student';
 import fileRouter from './routes/file';
 import worksheetRouter from './routes/worksheet';
 import enrolmentRouter from './routes/enrolment';
+import replacementRouter from './routes/replacement';
 
 export const app = express();
 
@@ -60,6 +61,7 @@ export async function setup(): Promise<string | null> {
   app.use('/file', fileRouter);
   app.use('/worksheet', worksheetRouter);
   app.use('/enrolment', enrolmentRouter);
+  app.use('/replacement', replacementRouter);
   
   app.use((req, res, next) => {
     res.status(404).json({
